# weavingcodes

./: .sparkleshare
dyadic/scm/: #tablet.scm#  .#tablet.scm
looms/: 16relay-info.txt  16relay-spec.txt  WWL.hs  loom9.dxf  simpleweave.hs  solenoid-spec.txt  wwl.cabal
tidal/: .#matrix.tidal  matrix.tidal
types/: Behaviour2.hs
