name:                wwl
version:             0.0.1
synopsis:            Weaving patterns
-- description:
license:             GPL-3
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>
Stability:           Experimental
Copyright:           (c) Alex McLean, 2019
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

Description: A simple weaving language

library
  ghc-options: -Wall

  default-language:    Haskell2010

  Exposed-modules:     WWL

  Build-depends:
                base >=4.8 && <5
              , serialport
              , bytestring